스크롤 레이아웃

--- a/index.html
+++ b/index.html
@@ -202,62 +202,134 @@
       </article>
     </section>
 
+    <!-- 캐스퍼 구매안내 -->
     <section id="buy">
       <h2>캐스퍼구매 안내</h2>
       <p class="p01">구매 절차를 차근차근 알려드립니다.</p>
 
-      <h3>캐스퍼, <span class="t_color">온라인</span>에서만<span class="t_color">구매할 수 있습니다.</span></h3>
+      <h3>캐스퍼, <span class='t_color'>온라인</span>에서만 <span class="t_color">구매</span>할 수 있습니다.</h3>
 
-      <ul>
-        <li>
-          <h4>쉬운 모델 선택</h4>
-          <img src="./images/icon_02.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
-          </p>
-        </li>
+      <ul class="clearfix">
         <li>
           <h4>쉬운 모델 선택</h4>
           <img src="./images/icon_01.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
+          <p class="p03">
+            원하는 사양의 차량을 3D로 확인해 볼 수 있고,<br>데이터를 기반으로 나에게 맞는 캐스퍼를 추천받을 수 있습니다.
           </p>
         </li>
         <li>
           <h4>쉬운 모델 선택</h4>
+          <img src="./images/icon_02.jpg" alt="">
+          <p class="p03">
+            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매 계획을 세울 수 있습니다.
+          </p>
+        </li>
+        <li>
+          <h4>자유로운 취소/변경</h4>
           <img src="./images/icon_03.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
+          <p class="p03">
+            계약 후에도 차량대금 결제 전이라면<br>자유롭게 원하는 사양으로 변경하고,<br>계약을 취소할 수 있습니다.(단, 특별주문차 제외)
           </p>
         </li>
         <li>
-          <h4>쉬운 모델 선택</h4>
-          <img src="./images/icon_04.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
-          </p>
+          <h4>찾아가는 배송</h4>
+          <img src="./images/icon_01.jpg" alt="">
+          <p class="p03">집, 직장 등 내가 원하는 장소에서<br>
+            캐스퍼를 배송 받을 수 있습니다.</p>
         </li>
         <li>
-          <h4>쉬운 모델 선택</h4>
-          <img src="./images/icon_05.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
-          </p>
+          <h4>진행 단계 알림</h4>
+          <img src="./images/icon_01.jpg" alt="">
+          <p class="p03">계약부터 차량 등록까지<br>
+            나의 계약 진행 상태를 메시지로 전송받을 수 있습니다.</p>
         </li>
         <li>
-          <h4>쉬운 모델 선택</h4>
-          <img src="./images/icon_06.jpg" alt="">
-          <p class="03">
-            구매 시뮬레이션을 통해<br>나의 자금 사정에 맞는<br>구매를 하세요.
-          </p>
+          <h4>향상된 고객지원</h4>
+          <img src="./images/icon_01.jpg" alt="">
+          <p class="p03">밤 10시까지 캐스퍼 고객센터(080-500-6000)를 통해 문의사항을 해결할 수 있고, 현대자동차의<br>직영서비스센터와 블루핸즈도 이용할 수 있습니다.</p>
         </li>
       </ul>
       <!-- 캐스퍼 구매영상 가이드 -->
-      <iframe src="https://www.youtube.com/embed/XIOoqJyx8E4" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe src="https://www.youtube.com/embed/MQSGzDRejUM" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
     </section>
 
+    <!-- 고객지원 -->
     <section id="cs">
       <h2>고객지원</h2>
+      <article class="clearfix">
+        <h3>ARS상담</h3>
+        <div class="ars_left">
+          <p class="cs_p">
+            <strong>캐스퍼 구매 상담</strong><br>
+            <a href="#" title="ars 이용방법">ARS이용방법</a><br>
+            <span class="car">자동차</span>
+          </p>
+          <dl>
+            <dt>전화번호</dt>
+            <dd>080-500-6000</dd>
+            <dt>이용 시간</dt>
+            <dd>월 &#x007e; 일요일 09:00 &#x007e; 22:00</dd>
+          </dl>
+        </div>
+        <div class="ars_right">
+          <p class="cs_p">
+            <strong>캐스퍼 정비/멤버쉽 상담</strong><br>
+            <a href="#" title="ars 이용방법">누르는 ARS이용방법</a><br>
+            <a href="#" title="ars 이용방법">보이는 ARS이용방법</a><br>
+            <span class="member">멤버십</span>
+          </p>
+          <dl>
+            <dt>전화번호</dt>
+            <dd>080-600-6000</dd>
+            <dt>이용 시간</dt>
+            <dd>월 &#x007E; 금요일 08:30 &#x007E; 19:00</dd>
+            <dd>토요일/공휴일 09:00 &#x007E; 17:00</dd>
+            <dd>일요일 09:00 &#x007E; 16:00</dd>
+          </dl>
+        </div>
+      </article>
+      <ul class="cs_list">
+        <li>
+          <p>
+            <strong>1:1 문의</strong><br>
+            <span class="cstitle">1:1문의가 필요하신가요?</span>
+            <a href="#" title="문의내역" class="csafter" >나의 1:1 문의 내역</a>
+            <a href="#" title="1:1문의하기" class="csbtn">1:1 문의하기</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <strong>채팅상담</strong><br>
+            <span class="cstitle">채팅 상담이 필요하신가요?</span>
+            <span>월 &#x007e; 일요일 09:00 &#x007e; 22:00</span>
+            <a href="#" title="채팅상담원 연결" class="csbtn">채팅상담원 연결</a>
+          </p>
+        </li>
+        <li>
+          <p>
+            <strong>원격 지원</strong><br>
+            <span class="cstitle">상담원이 고객님과 같은 PC 화면을 보면서 도움을 드립니다.</span>
+            <span>월 &#x007e; 일요일 09:00 &#x007e; 22:00</span>
+            <a href="#" title="원격 지원 시작하기" class="csbtn">원격 지원 시작하기</a>
+          </p>
+        </li>
+        <li>
+          <p class="csapp">
+            <strong>마이현대 APP</strong><br>
+            <span class="cstitle">현대자동차 멤버십과 차량 정비&#x002F;점검, 카라이프 서비스까지 모두 마이 현대로 관리하세요.</span>
+          </p>
+          <p style="text-align: center; padding-top:30px;">
+            <img src="./images/caspericon.png" alt="현대앱아이콘"><br>
+            <a href="#" title="iOS" class="csafter" style="padding:20px;">iOS</a>
+            <a href="#" title="android" class="csafter" >Android</a>
+          </p>
+        </li>
+      </ul>
+      <div class="bbanner">
+      <a href="#" title="이벤트배너" >
+        <img src="./images/event_banner1.jpg" alt="" id="b_banner">
+      </a>
+    </div>
     </section>
   </main>
 
@@ -314,7 +386,7 @@
         clickable: true, //콘트롤버튼 클릭기능
       }
     });
+    document.getElementById('b_banner').src="./images/event_banner"+img_num+".jpg";
   </script>
-
 </body>
 </html>
