스크롤 레이아웃

--- a/index.html
+++ b/index.html
@@ -386,6 +386,8 @@
         clickable: true, //콘트롤버튼 클릭기능
       }
     });
+    img_num = Math.floor(Math.random()*4+1);
+
     document.getElementById('b_banner').src="./images/event_banner"+img_num+".jpg";
   </script>
 </body>
